feat: production config - PostgreSQL, Railway, Vercel deployment ready